--- a/github-battle/package.json
+++ b/github-battle/package.json
@@ -10,6 +10,7 @@
   "author": "David Gómez",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.13.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-router": "^2.0.0-rc5"
